syntax = "proto3";

option go_package = "github.com/karokojnr/bookmesh-shared/proto";

package api;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated BookWithQuantity books = 2;

}

message BookWithQuantity {
    string book_id = 1;
    int32 quantity = 2;
}

message Order {
    string order_id = 1;
    string customer_id = 2;
    string status = 3;
    repeated Book books = 4;
    string payment_link = 5;
}

message Book {
    string book_id = 1;
    string title = 2;
    repeated string authors = 3;
    string price_id = 4;
    int32 quantity = 5;
    
}

message GetOrderRequest {
    string order_id = 1;
    string customer_id = 2;
}

service CatalogService {
    rpc CheckIfBookIsInCatalog(CheckIfBookIsInCatalogRequest) returns (CheckIfBookIsInCatalogResponse);
    rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
}

message CheckIfBookIsInCatalogRequest {
    repeated BookWithQuantity books = 1;
}

message CheckIfBookIsInCatalogResponse {
    bool is_in_catalog = 1;
    repeated Book books = 2;
}

message GetBooksRequest {
    repeated string book_ids = 1;
}

message GetBooksResponse {
    repeated Book books = 1;
}